# pandasAI

./: .envrc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run_app.py  sample_data.csv
cache/: cache_db_0.11.db.wal
src/pandasai_to_pandas/: __init__.py  __main__.py  app.py  cli.py  core.py  main.py
src/pandasai_to_pandas/data/: history.json
src/pandasai_to_pandas/static/css/: styles.css
src/pandasai_to_pandas/static/js/: script.js
src/pandasai_to_pandas/templates/: index.html
tests/: 1.py  test_result.py
